--- a/app/src/main/res/layout/estate_list_item.xml
+++ b/app/src/main/res/layout/estate_list_item.xml
@@ -5,15 +5,15 @@
         android:id="@+id/constraint_item"
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="@dimen/picture_list_size"
         android:elevation="2dp"
         android:background="@drawable/selector_item_color"
         tools:targetApi="lollipop">
 
     <ImageView
             android:id="@+id/estate_picture"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:layout_width="@dimen/picture_list_size"
+            android:layout_height="@dimen/picture_list_size"
             android:src="@drawable/no_image_original"
             app:layout_constraintTop_toTopOf="parent"
             android:contentDescription="@string/image"
@@ -32,7 +32,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_marginStart="20dp"
-            android:textSize="18sp"
+            android:textSize="@dimen/text_type_size"
             android:textStyle="bold"
             android:textColor="@android:color/black"
             app:layout_constraintStart_toEndOf="@+id/barrier"
@@ -45,7 +45,7 @@
             android:layout_marginStart="20dp"
             android:layout_marginTop="10dp"
             android:textColor="@android:color/black"
-            android:textSize="16sp"
+            android:textSize="@dimen/text_town_size"
             app:layout_constraintStart_toEndOf="@+id/barrier"
             app:layout_constraintTop_toBottomOf="@+id/estate_type" />
 
@@ -56,32 +56,24 @@
             android:layout_marginTop="10dp"
             android:layout_marginStart="20dp"
             android:textColor="@color/colorPrimaryDark"
-            android:textSize="22sp"
+            android:textSize="@dimen/text_price_size"
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@+id/barrier"
             app:layout_constraintTop_toBottomOf="@+id/estate_town" />
 
-    <TextView
+    <ImageView
             android:id="@+id/estate_sold"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:text="@string/sold_text"
-            android:textColor="@android:color/holo_red_dark"
-            android:textSize="22sp"
+            android:layout_width="110dp"
+            android:layout_height="110dp"
+            android:layout_marginEnd="10dp"
+            android:background="@null"
             android:textStyle="bold"
             android:visibility="gone"
+            android:contentDescription="@string/image"
+            android:src="@drawable/sold_png_transparent_image"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/barrier"
-            app:layout_constraintTop_toBottomOf="@+id/estate_price" />
-
-<!--    <View-->
-<!--            android:id="@+id/line1"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="1dp"-->
-<!--            android:background="@android:color/darker_gray"-->
-<!--            app:layout_constraintTop_toBottomOf="@+id/estate_picture" />-->
+            app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
