--- a/app/src/main/res/layout-w600dp-land/fragment_detail_estate.xml
+++ b/app/src/main/res/layout-w600dp-land/fragment_detail_estate.xml
@@ -17,17 +17,41 @@
                 android:layout_height="match_parent">
 
             <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/constraint_type"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                <Button
+                        android:id="@+id/button_edit"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp"
+                        android:background="@drawable/bg_button_radius"
+                        android:text="@string/item_edit_title"
+                        android:textColor="@android:color/white"
+                        android:textSize="17sp"
+                        android:paddingStart="10dp"
+                        android:paddingEnd="10dp"
+                        android:drawableStart="@drawable/ic_create_white_18dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+            <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/constraint1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:layout_constraintTop_toTopOf="parent">
+                    app:layout_constraintTop_toBottomOf="@+id/constraint_type">
 
                 <TextView
                         android:id="@+id/text_view_detail_title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
-                        android:layout_marginTop="8dp"
                         android:layout_marginEnd="8dp"
                         android:layout_marginBottom="8dp"
                         android:text="@string/media_title"
@@ -229,6 +253,261 @@
                         app:layout_constraintStart_toStartOf="@id/tv_surface"
                         app:layout_constraintTop_toBottomOf="@+id/tv_nbr_bedrooms" />
 
+                <ImageView
+                        android:id="@+id/icon_price"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:layout_marginTop="20dp"
+                        android:contentDescription="@string/image"
+                        android:src="@drawable/ic_money_black_18dp"
+                        app:layout_constraintStart_toStartOf="@+id/icon_nbr_bedrooms"
+                        app:layout_constraintTop_toBottomOf="@+id/text_nbr_bedrooms" />
+
+                <TextView
+                        android:id="@+id/tv_price"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginTop="-2dp"
+                        android:text="@string/price_title"
+                        android:textSize="13sp"
+                        android:textStyle="bold"
+                        app:layout_constraintStart_toEndOf="@id/icon_price"
+                        app:layout_constraintTop_toTopOf="@+id/icon_price" />
+
+                <TextView
+                        android:id="@+id/text_price"
+                        android:layout_width="wrap_content"
+                        android:layout_height="14dp"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="4dp"
+                        android:textSize="13sp"
+                        app:layout_constraintStart_toStartOf="@id/tv_surface"
+                        app:layout_constraintTop_toBottomOf="@+id/tv_price" />
+
+                <ImageView
+                        android:id="@+id/icon_realtor"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:layout_marginTop="20dp"
+                        android:contentDescription="@string/image"
+                        android:src="@drawable/ic_account_box_18dp"
+                        app:layout_constraintStart_toStartOf="@+id/icon_price"
+                        app:layout_constraintTop_toBottomOf="@+id/text_price" />
+
+                <TextView
+                        android:id="@+id/tv_realtor"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginTop="-2dp"
+                        android:text="@string/realtor_tv"
+                        android:textSize="13sp"
+                        android:textStyle="bold"
+                        app:layout_constraintStart_toEndOf="@id/icon_realtor"
+                        app:layout_constraintTop_toTopOf="@+id/icon_realtor" />
+
+                <TextView
+                        android:id="@+id/text_realtor"
+                        android:layout_width="wrap_content"
+                        android:layout_height="14dp"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="4dp"
+                        android:textSize="13sp"
+                        app:layout_constraintStart_toStartOf="@id/tv_realtor"
+                        app:layout_constraintTop_toBottomOf="@+id/tv_realtor" />
+
+                <View
+                        android:id="@+id/line4"
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_marginStart="25dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginEnd="25dp"
+                        app:layout_constraintTop_toBottomOf="@+id/text_realtor" />
+
+
+                <TextView
+                        android:id="@+id/tv_Points_interests"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginTop="20dp"
+                        android:text="@string/points_of_interest"
+                        android:textColor="@android:color/black"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/line4" />
+
+                <CheckBox
+                        android:id="@+id/checkbox_school"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginTop="20dp"
+                        android:backgroundTint="@color/colorPrimary"
+                        android:text="@string/school"
+                        app:layout_constraintEnd_toStartOf="@+id/guideline"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/tv_Points_interests"
+                        tools:targetApi="lollipop" />
+
+
+                <androidx.constraintlayout.widget.Guideline
+                        android:id="@+id/guideline"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        app:layout_constraintGuide_percent="0.5" />
+
+                <CheckBox
+                        android:id="@+id/checkbox_shops"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="20dp"
+                        android:backgroundTint="@color/colorPrimary"
+                        android:text="@string/shops"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="@+id/guideline"
+                        app:layout_constraintTop_toBottomOf="@+id/tv_Points_interests"
+                        tools:targetApi="lollipop" />
+
+
+                <CheckBox
+                        android:id="@+id/checkbox_park"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="20dp"
+                        android:backgroundTint="@color/colorPrimary"
+                        android:text="@string/parc"
+                        app:layout_constraintStart_toStartOf="@+id/checkbox_school"
+                        app:layout_constraintTop_toBottomOf="@+id/checkbox_train_station"
+                        tools:targetApi="lollipop" />
+
+                <CheckBox
+                        android:id="@+id/checkbox_train_station"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="20dp"
+                        android:backgroundTint="@color/colorPrimary"
+                        android:text="@string/train_station"
+                        app:layout_constraintStart_toStartOf="@+id/checkbox_school"
+                        app:layout_constraintTop_toBottomOf="@+id/checkbox_school"
+                        tools:targetApi="lollipop" />
+
+                <CheckBox
+                        android:id="@+id/checkbox_subway"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="20dp"
+                        android:backgroundTint="@color/colorPrimary"
+                        android:text="@string/subway"
+                        app:layout_constraintStart_toStartOf="@+id/checkbox_shops"
+                        app:layout_constraintTop_toBottomOf="@+id/checkbox_school"
+                        tools:targetApi="lollipop" />
+
+
+                <CheckBox
+                        android:id="@+id/checkbox_airport"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="20dp"
+                        android:backgroundTint="@color/colorPrimary"
+                        android:text="@string/airport"
+                        app:layout_constraintStart_toStartOf="@+id/checkbox_subway"
+                        app:layout_constraintTop_toBottomOf="@+id/checkbox_subway"
+                        tools:targetApi="lollipop" />
+
+                <View
+                        android:id="@+id/line5"
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginTop="20dp"
+                        android:layout_marginEnd="20dp"
+                        app:layout_constraintTop_toBottomOf="@+id/checkbox_airport" />
+
+                <TextView
+                        android:id="@+id/tv_status"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginTop="20dp"
+                        android:text="@string/status"
+                        android:textColor="@android:color/black"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/line5" />
+
+                <CheckBox
+                        android:id="@+id/checkboxAvailable"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="20dp"
+                        android:backgroundTint="@color/colorPrimary"
+                        android:text="@string/available"
+                        app:layout_constraintEnd_toStartOf="@+id/guideline"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/tv_status"
+                        tools:targetApi="lollipop" />
+
+                <CheckBox
+                        android:id="@+id/checkboxSold"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginTop="20dp"
+                        android:backgroundTint="@color/colorPrimary"
+                        android:text="@string/sold"
+                        app:layout_constraintStart_toStartOf="@+id/guideline"
+                        app:layout_constraintTop_toBottomOf="@+id/tv_status"
+                        tools:targetApi="lollipop" />
+
+                <TextView
+                        android:id="@+id/tv_entryDate"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="20dp"
+                        android:text="@string/entry_date_tv"
+                        android:textColor="@android:color/black"
+                        app:layout_constraintStart_toStartOf="@+id/checkboxAvailable"
+                        app:layout_constraintTop_toBottomOf="@+id/checkboxSold" />
+
+                <TextView
+                        android:id="@+id/picker_entryDate"
+                        android:layout_width="100dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="20dp"
+                        android:background="@android:color/white"
+                        android:gravity="center"
+                        android:textColor="@android:color/black"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        android:layout_marginBottom="40dp"
+                        app:layout_constraintStart_toStartOf="@+id/tv_entryDate"
+                        app:layout_constraintTop_toBottomOf="@+id/tv_entryDate" />
+
+                <TextView
+                        android:id="@+id/tv_soldDate"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginTop="20dp"
+                        android:visibility="gone"
+                        android:text="@string/sold_date_tv"
+                        android:textColor="@android:color/black"
+                        app:layout_constraintStart_toStartOf="@+id/guideline"
+                        app:layout_constraintTop_toBottomOf="@+id/checkboxSold" />
+
+                <TextView
+                        android:id="@+id/picker_soldDate"
+                        android:layout_width="100dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="20dp"
+                        android:background="@android:color/white"
+                        android:gravity="center"
+                        android:visibility="gone"
+                        android:textColor="@android:color/black"
+                        app:layout_constraintStart_toStartOf="@+id/checkboxSold"
+                        app:layout_constraintTop_toBottomOf="@+id/tv_soldDate" />
+
                 <!--Location-->
 
                 <ImageView
@@ -310,18 +589,49 @@
                         app:layout_constraintStart_toStartOf="@id/text_location_cp"
                         app:layout_constraintTop_toBottomOf="@id/text_location_cp" />
 
+                <ImageView
+                        android:id="@+id/icon_type"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:contentDescription="@string/image"
+                        android:src="@drawable/ic_location_city_black_18dp"
+                        app:layout_constraintStart_toStartOf="@+id/guideline3"
+                        app:layout_constraintTop_toTopOf="@+id/icon_location" />
+
+                <TextView
+                        android:id="@+id/tv_type"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginTop="-2dp"
+                        android:text="@string/type_title"
+                        android:textSize="13sp"
+                        android:textStyle="bold"
+                        app:layout_constraintStart_toEndOf="@id/icon_type"
+                        app:layout_constraintTop_toTopOf="@+id/icon_type" />
+
+                <TextView
+                        android:id="@+id/text_type"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="4dp"
+                        android:textSize="13sp"
+                        app:layout_constraintStart_toStartOf="@+id/tv_type"
+                        app:layout_constraintTop_toBottomOf="@+id/tv_type" />
+
                 <com.google.android.gms.maps.MapView
                         android:id="@+id/detail_lite_map"
                         android:name="com.google.android.gms.maps.MapFragment"
                         android:layout_width="@dimen/small_map_size"
                         android:layout_height="@dimen/small_map_size"
+                        android:layout_marginTop="30dp"
                         android:clickable="true"
                         android:focusable="true"
                         app:cameraZoom="17"
-                        app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="@+id/guideline3"
-                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/text_location_country"
                         app:liteMode="true" />
 
                 <androidx.constraintlayout.widget.Guideline
