--- a/app/src/main/res/layout-w600dp-land/activity_create_estate.xml
+++ b/app/src/main/res/layout-w600dp-land/activity_create_estate.xml
@@ -373,7 +373,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
-                    android:backgroundTint="@color/colorPrimary"
+                    android:background="@drawable/bg_button_radius"
                     android:text="@string/shops"
                     app:layout_constraintEnd_toStartOf="@+id/guideline"
                     app:layout_constraintStart_toEndOf="@+id/checkbox_school"
