--- a/app/src/main/res/menu-sw600dp/drawer_menu.xml
+++ b/app/src/main/res/menu-sw600dp/drawer_menu.xml
@@ -16,6 +16,11 @@
                 android:id="@+id/activity_main_drawer_create"
                 android:icon="@drawable/ic_add_black_18dp"
                 android:title="@string/item_create_title" />
+
+        <item
+                android:id="@+id/activity_main_drawer_prefs"
+                android:icon="@drawable/ic_settings_black_18dp"
+                android:title="@string/item_prefs_title" />
         <item
                 android:id="@+id/activity_main_drawer_logout"
                 android:icon="@drawable/ic_logout_black_18dp"
