--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -15,7 +15,7 @@
             android:layout_marginTop="50dp"
             android:layout_marginStart="25dp"
             android:layout_marginEnd="25dp"
-            android:text="@string/device_choice"
+            android:text="@string/foreign_choice"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="@dimen/text_price_size"
             app:layout_constraintTop_toTopOf="parent"
@@ -55,7 +55,7 @@
             tools:targetApi="lollipop" />
 
     <Button
-            android:id="@+id/valid_device_btn"
+            android:id="@+id/valid_foreign_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="60dp"
