--- a/app/src/main/res/layout-w600dp-land/fragment_detail_estate.xml
+++ b/app/src/main/res/layout-w600dp-land/fragment_detail_estate.xml
@@ -278,7 +278,7 @@
                 <TextView
                         android:id="@+id/text_price"
                         android:layout_width="wrap_content"
-                        android:layout_height="14dp"
+                        android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
                         android:layout_marginTop="4dp"
                         android:textSize="13sp"
@@ -310,7 +310,7 @@
                 <TextView
                         android:id="@+id/text_realtor"
                         android:layout_width="wrap_content"
-                        android:layout_height="14dp"
+                        android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
                         android:layout_marginTop="4dp"
                         android:textSize="13sp"
